:construction: Project pipeline
Whole pipeline script added, it is still missing better training conditions.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,11 @@
             "justMyCode": false,
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
-            }
+            },
+            "args": [
+                "--trained_vae",
+                "--trained_action_encoder",
+            ]
         }
     ]
 }
